--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,10 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+
+
+*.suo
+*.user
+
+/ChatRoom/ChatRoom.Web/bin
+/ChatRoom/ChatRoom.Web/obj
